Added route /combat-results
